LPS-163650 Add language keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Custom Dialogs
 category.data-integration=Data Integration
 category.data-providers=Data Providers
+category.default-portlet-decorator=Default Portlet Decorator
 category.development=Development
 category.devices=Devices
 category.digital-signature=Digital Signature
@@ -4894,6 +4895,7 @@ default-logout-page=Default Logout Page
 default-logout-page-help=This is the page that users are automatically redirected to after logging out. For example, if you want the default logout page to be http://localhost:8080/web/guest/logout, set this to /web/guest/logout.
 default-max-connections-per-route=Default Max Connections per Route
 default-page-audit-image-alt-description=Default Page Audit image.
+default-portlet-decorator-configuration-name=Default Portlet Decorator
 default-preferences=Default Preferences
 default-product-display-page=Default Product Display Page
 default-regular-theme=Default Regular Theme
@@ -14044,6 +14046,7 @@ select-poll=Select Poll
 select-portlet=Select Portlet
 select-product-display-page=Select Product Display Page
 select-product-group=Select Product Group
+select-properties-application-decorators=Select Default Portlet Decoration Id
 select-production-to-review-the-change=Select production to review the change.
 select-question=Select Question
 select-radius=Select Radius
