--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Custom Dialogs
 category.data-integration=Data Integration
 category.data-providers=Data Providers
+category.decorator-portlet=Portlet Configuration
 category.development=Development
 category.devices=Devices
 category.digital-signature=Digital Signature
@@ -4842,6 +4843,7 @@ decline-all=Decline All
 declined=Declined
 decorated=Decorated
 decoration=Decoration
+decorator-configuration-name=Default Portlet Decorator Id Configuration
 default=Default
 default-account-addresses=Default Account Addresses
 default-account-commerce-channels-shipping-options=Default Account Commerce Channels Shipping Options
@@ -14039,6 +14041,7 @@ select-poll=Select Poll
 select-portlet=Select Portlet
 select-product-display-page=Select Product Display Page
 select-product-group=Select Product Group
+select-properties-application-decorators=Select Default Portlet Decoration Id
 select-production-to-review-the-change=Select production to review the change.
 select-question=Select Question
 select-radius=Select Radius
