LPS-163650 Add language keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Custom Dialogs
 category.data-integration=Data Integration
 category.data-providers=Data Providers
+category.default-portlet-decorator=Default Portlet Decorator
 category.development=Development
 category.devices=Devices
 category.digital-signature=Digital Signature
@@ -4894,6 +4895,7 @@ default-logout-page=Default Logout Page
 default-logout-page-help=This is the page that users are automatically redirected to after logging out. For example, if you want the default logout page to be http://localhost:8080/web/guest/logout, set this to /web/guest/logout.
 default-max-connections-per-route=Default Max Connections per Route
 default-page-audit-image-alt-description=Default Page Audit image.
+default-portlet-decorator-configuration-name=Default Portlet Decorator
 default-preferences=Default Preferences
 default-product-display-page=Default Product Display Page
 default-regular-theme=Default Regular Theme
@@ -13974,6 +13976,7 @@ select-css-client-extensions=Select CSS Client Extensions
 select-data-fields=Select Data Fields
 select-date=Select Date
 select-date-range=Select Date Range
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id
 select-destination=Select Destination
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items
