LPS-163650 Rename to keep consistency

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -13976,6 +13976,7 @@ select-css-client-extensions=Select CSS Client Extensions
 select-data-fields=Select Data Fields
 select-date=Select Date
 select-date-range=Select Date Range
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id
 select-destination=Select Destination
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items
