--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Data Integration (Automatic Copy)
 category.data-providers=Data Providers (Automatic Copy)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Razvoj
 category.devices=Devices (Automatic Copy)
 category.digital-signature=Digital Signature (Automatic Copy)
@@ -4894,6 +4895,7 @@ default-logout-page=Podrazumevana Odjavna Stranica
 default-logout-page-help=This is the page that users are automatically redirected to after logging out. For example, if you want the default logout page to be http://localhost:8080/web/guest/logout, set this to /web/guest/logout. (Automatic Copy)
 default-max-connections-per-route=Default Max Connections per Route (Automatic Copy)
 default-page-audit-image-alt-description=Default Page Audit image. (Automatic Copy)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Podrazumevana Podešavanja
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Redovna Podrazumevana Tema
@@ -13968,6 +13970,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Select Data Fields (Automatic Copy)
 select-date=Izaberite Datum
 select-date-range=Select Date Range (Automatic Copy)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
